--- a/pom.xml
+++ b/pom.xml
@@ -50,13 +50,17 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.twilio.sdk/twilio -->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.twilio.sdk/twilio &ndash;&gt;
         <dependency>
             <groupId>com.twilio.sdk</groupId>
             <artifactId>twilio</artifactId>
             <version>10.4.1</version>
-        </dependency>
+        </dependency>-->
         <!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
