--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: Auth-Service
   datasource:
-    url: jdbc:mysql://localhost:3306/userDB?createDatabaseIfNotExist=true
+    url: jdbc:mysql://root:ufdaoJixJwsvNuKcCPCaHblieGtDmFAQ@monorail.proxy.rlwy.net:34640/railway?createDatabaseIfNotExist=true
     username: root
-    password: password
+    password: ufdaoJixJwsvNuKcCPCaHblieGtDmFAQ
   jpa:
     hibernate:
       ddl-auto: update
