--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,9 +30,9 @@ spring:
 eureka:
   instance:
     lease-renewal-interval-in-seconds: 0
-    hostname: auth-service-production-9d14.up.railway.app
-    metadata-map:
-      publicUrl: https://auth-service-production-9d14.up.railway.app
+#    hostname: auth-service-production-9d14.up.railway.app
+#    metadata-map:
+#      publicUrl: https://auth-service-production-9d14.up.railway.app
   client:
     service-url:
       defaultZone : https://eurekaregistry-production.up.railway.app/eureka
