modified google auth v2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,7 +35,7 @@ eureka:
 #      publicUrl: https://auth-service-production-9d14.up.railway.app
   client:
     service-url:
-      defaultZone : https://eurekaregistry-production.up.railway.app/eureka
+      defaultZone :  http://localhost:8761/eureka
 
 
 management:
